@@ -72,10 +72,15 @@ class CCheckBoxColumn extends CGridColumn
 	 */
 	public function init()
 	{
-		$name=isset($this->checkBoxHtmlOptions['name']) ? $this->checkBoxHtmlOptions['name'] : $this->id;
-		if(substr($name,-2)!=='[]')
-			$name.='[]';
-		$this->checkBoxHtmlOptions['name']=$name;
+		if(isset($this->checkBoxHtmlOptions['name']))
+			$name=$this->checkBoxHtmlOptions['name'];
+		else
+		{
+			$name=$this->id;
+			if(substr($name,-2)!=='[]')
+				$name.='[]';
+			$this->checkBoxHtmlOptions['name']=$name;
+		}
 		$name=strtr($name,array('['=>"\\[",']'=>"\\]"));
 		if($this->grid->selectableRows==1)
 			$one="\n\tjQuery(\"input:not(#\"+$(this).attr('id')+\")[name='$name']\").attr('checked',false);";
